fix(nav-header): fix toggle menu responsiveness on small screens

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,7 +8,7 @@ body {
   animation: appear linear;
   animation-timeline: view();
   animation-range: entry 0;
-  padding: 0 1rem;
+  padding: 0 2rem;
   max-width: 100%;
 }
 
