--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -17,7 +17,6 @@
     transition: box-shadow 0.3s ease;
     background-color: $white-color;
 
-
     &.scrolled {
         box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
     }
@@ -69,10 +68,12 @@
         display: flex;
         gap: $gap-m;
         justify-content: center;
+        align-items: center;
         font-family: $font-montserrat;
         font-size: $font-size-xs;
         list-style: none;
         margin-left: $gap-xxl;
+        max-width: 90%;
 
         .menu-item  a {
             position: relative;
@@ -98,6 +99,7 @@
 
             &.active::after {
                 width: 100%;
+                
             }
         }
     }
@@ -289,18 +291,21 @@
     .menu-list {
       display: none;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
       position: absolute;
       top: 4rem;
-      left: 0;
-      width: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80%;
       background-color: $white-color;
-      padding: 1rem 0;
+      padding: 1rem;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
       z-index: 9;
+      margin-left: 0;
 
       &.active {
         display: flex;
-        align-items: center;
       }
     }
 
@@ -325,23 +330,35 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .nav {
-    .menu-toggle {
-      display: none;
-    }
+    .nav {
+        .menu-toggle {
+        display: none;
+        }
 
-    .menu-list,
-    .actions-content {
-      display: flex !important;
-    }
+        .menu-list,
+        .actions-content {
+        display: flex !important;
+        }
 
-    .menu-list {
-      flex-direction: row;
-    }
+        .menu-list {
+        flex-direction: row;
+        }
 
-    .actions-content {
-      flex-direction: row;
+        .actions-content {
+        flex-direction: row;
+        }
     }
-  }
 }
-
+@media screen and (max-width: 480px) {
+    .nav {    
+        .menu-toggle {
+            margin-left: 0;
+            padding: 0 0;
+            gap: 0;
+        }
+        .menu-list {
+            margin-left: 0;
+        }
+        
+    }
+}  
